--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
       run: python -m pip install --upgrade tox
     - name: Run tox targets for ${{ matrix.python-version }}
       run: |
-        ENV_PREFIX=$(echo "py${{ matrix.python-version }}-" | tr -d ".")
+        ENV_PREFIX=$(tr -d "." <<< "py${{ matrix.python-version }}-")
         TOXENV=$(tox --listenvs | grep $ENV_PREFIX | tr '\n' ',') python -m tox
     - name: Run checks
       if: matrix.python-version == '3.8'
