--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,29 @@ jobs:
         - 3.7
         - 3.8
 
+    services:
+      elasticsearch:
+        image: elasticsearch:7.8.0
+        ports:
+        - 9200:9200
+        env:
+          discovery.type: single-node
+
+      mongodb:
+        image: mongo:4
+        ports:
+        - 27017:27017
+
+      redis:
+        image: redis:5
+        ports:
+        - 6379:6379
+
+    env:
+      ELASTICSEARCH_URL: http://localhost:9200/
+      MONGODB_URL: mongodb://localhost:27017/
+      REDIS_URL: redis://localhost:6379/0
+
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2.1.1
