--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
         twine check dist/* wheelhouse/*
         ls -al dist wheelhouse
     - name: Release
-      if: ${{ github.event_name == 'tag' && github.ref.startsWith('v') }}
+      if: ${{ github.event_name == 'tag' && startsWith(github.ref, 'v') }}
       run: "echo publish"
       # env:
       #   TWINE_NON_INTERACTIVE: 1
