--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,14 +20,16 @@ jobs:
         python-version: 3.7
     - name: Install packaging tools
       run: python -m pip install --upgrade cibuildwheel pip setuptools twine wheel
-    - name: Build
+    - name: Build sdist
+      run: python setup.py sdist
+    - name: Build wheels
       env:
         CIBW_SKIP: "cp33-*"
-      run: |
-        python setup.py sdist
-        cibuildwheel
-        twine check dist/* wheelhouse/*
-        ls -al dist wheelhouse
+      run: cibuildwheel
+    - name: Check wheels
+      run: twine check dist/* wheelhouse/*
+    - name: List files
+      run: ls -al dist wheelhouse
     - name: Release
       if: ${{ github.event_name == 'tag' && startsWith(github.ref, 'v') }}
       run: "echo publish"
