--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,3 +4,12 @@ build-backend = "setuptools.build_meta"
 
 [tool.black]
 target-version = ["py27"]
+
+[tool.isort]
+profile = "black"
+add_imports = [
+    "from __future__ import absolute_import",
+    "from __future__ import division",
+    "from __future__ import print_function",
+    "from __future__ import unicode_literals",
+]
