--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,11 @@
 [tox]
 isolated_build = True
 envlist =
-    py38-codestyle,
-    {py27,py34,py35}-django18,
-    {py27,py34,py35,py36}-django111,
-    {py34,py35,py36,py37,py38}-django20,
-    {py35,py36,py37,py38}-django21,
+    py38-codestyle
+    {py27,py34,py35}-django18
+    {py27,py34,py35,py36}-django111
+    {py34,py35,py36,py37,py38}-django20
+    {py35,py36,py37,py38}-django21
     {py35,py36,py37,py38}-django22
     {py36,py37,py38}-django30
 
