Fix release process for cibuildwheel 1.6.0
This version of cibuildwheel has disabled our Python 2 wheel building since it sees that it's not a binary wheel and says to build it once yourself (see below logs). This PR does that by installing Python 2.7 on GitHub Actions too.

```
Building wheels for collected packages: scout-apm
  Building wheel for scout-apm (PEP 517): started
  Building wheel for scout-apm (PEP 517): finished with status 'done'
  Created wheel for scout-apm: filename=scout_apm-2.16.0-py2-none-any.whl size=58254 sha256=f46f3bcd3b2100b905a05a8f3cfe89359eb97a6877e04bf5b0ea5114e0b1c904
  Stored in directory: /tmp/pip-ephem-wheel-cache-2UXuaG/wheels/ca/c1/c0/18849572a9d9850c185240b5123a2c0efd538774d2e703fcf9
Successfully built scout-apm
    + /opt/python/cp38-cp38/bin/python -c 'import sys, json, glob; json.dump(glob.glob('"'"'/tmp/cibuildwheel/built_wheel/*.whl'"'"'), sys.stdout)'
    + rm -rf /tmp/cibuildwheel/repaired_wheel
    + mkdir -p /tmp/cibuildwheel/repaired_wheel
cibuildwheel-d9327db8-1d52-4cf1-b190-06c4b1ac5a5c
Traceback (most recent call last):
  File "/opt/hostedtoolcache/Python/3.7.9/x64/bin/cibuildwheel", line 8, in <module>
    sys.exit(main())
  File "/opt/hostedtoolcache/Python/3.7.9/x64/lib/python3.7/site-packages/cibuildwheel/__main__.py", line 234, in main
    cibuildwheel.linux.build(build_options)
  File "/opt/hostedtoolcache/Python/3.7.9/x64/lib/python3.7/site-packages/cibuildwheel/linux.py", line 183, in build
    raise NonPlatformWheelError()
cibuildwheel.util.NonPlatformWheelError:
cibuildwheel: Build failed because a pure Python wheel was generated.

If you intend to build a pure-Python wheel, you don't need cibuildwheel - use
`pip wheel -w DEST_DIR .` instead.

If you expected a platform wheel, check your project configuration, or run
cibuildwheel with CIBW_BUILD_VERBOSITY=1 to view build logs.
```

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,15 +18,22 @@ jobs:
     - uses: actions/setup-python@v2.1.1
       with:
         python-version: 3.7
+    - uses: actions/setup-python@v2.1.1
+      with:
+        python-version: 2.7
     - name: Install packaging tools
-      run: python -m pip install --upgrade cibuildwheel pip setuptools twine wheel
+      run: |
+        python2.7 -m pip install --upgrade pip setuptools wheel
+        python3.7 -m pip install --upgrade cibuildwheel pip setuptools twine wheel
     - name: Build sdist
-      run: python setup.py sdist
-    - name: Build wheels
+      run: python3.7 setup.py sdist
+    - name: Build Python 2 wheel
+      run: python2.7 setup.py bdist_wheel
+    - name: Build binary wheels
       env:
-        CIBW_SKIP: "cp33-*"
+        CIBW_SKIP: "cp27-* cp33-*"
       run: cibuildwheel
-    - name: Check wheels
+    - name: Check packages
       run: twine check dist/* wheelhouse/*
     - name: List files
       run: ls -al dist wheelhouse
