--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
       run: python2.7 setup.py bdist_wheel
     - name: Build binary wheels
       env:
-        CIBW_SKIP: "cp27-* cp33-*"
+        CIBW_SKIP: "cp27-*"
       run: cibuildwheel
     - name: Check packages
       run: twine check dist/* wheelhouse/*
