--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,8 @@ jobs:
       run: python2.7 setup.py bdist_wheel
     - name: Build binary wheels
       env:
-        CIBW_SKIP: "cp27-* pp27-*"
+        # Disable for platforms where pure Python wheels would be generated.
+        CIBW_SKIP: "cp27-* pp27-* pp336-*"
       run: cibuildwheel
     - name: Check packages
       run: twine check dist/* wheelhouse/*
