--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,18 +17,22 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2.1.1
       with:
-        python-version: 3.7
+        python-version: 3.8
     - uses: actions/setup-python@v2.1.1
       with:
         python-version: 2.7
     - name: Install packaging tools
       run: |
         python2.7 -m pip install --upgrade pip setuptools wheel
-        python3.7 -m pip install --upgrade cibuildwheel pip setuptools twine wheel
+        python3.8 -m pip install --upgrade cibuildwheel pip setuptools twine wheel
     - name: Build sdist
-      run: python3.7 setup.py sdist
+      run: python3.8 setup.py sdist
     - name: Build Python 2 wheel
       run: python2.7 setup.py bdist_wheel
+    - name: Build Python 3 wheel
+      env:
+        SCOUT_DISABLE_EXTENSIONS: "1"
+      run: python3.8 setup.py bdist_wheel
     - name: Build binary wheels
       env:
         # Disable for platforms where pure Python wheels would be generated.
