--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,7 @@ jobs:
         - 3.6
         - 3.7
         - 3.8
+        - 3.9-dev
 
     services:
       elasticsearch:
@@ -56,5 +57,5 @@ jobs:
       run: python -m pip install --upgrade tox
     - name: Run tox targets for ${{ matrix.python-version }}
       run: |
-        ENV_PREFIX=$(tr -d "." <<< "py${{ matrix.python-version }}-")
-        TOXENV=$(tox --listenvs | grep $ENV_PREFIX | tr '\n' ',') python -m tox
+        ENV_PREFIX=$(tr -C -d "0-9" <<< "${{ matrix.python-version }}")
+        TOXENV=$(tox --listenvs | grep "^py$ENV_PREFIX" | tr '\n' ',') python -m tox
