--- a/tox.ini
+++ b/tox.ini
@@ -6,9 +6,9 @@ envlist =
     {py27,py34,py35,py36}-django111
     {py34,py35,py36,py37,py38}-django20
     {py35,py36,py37,py38}-django21
-    {py35,py36,py37,py38}-django22
-    {py36,py37,py38}-django30
-    {py36,py37,py38}-django31
+    {py35,py36,py37,py38,py39}-django22
+    {py36,py37,py38,py39}-django30
+    {py36,py37,py38,py39}-django31
 
 [testenv]
 passenv =
