--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,7 @@ jobs:
         - 3.6
         - 3.7
         - 3.8
+        - 3.9
 
     services:
       elasticsearch:
@@ -47,7 +48,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/setup-python@v2.1.1
+    - uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
     - name: Upgrade packaging tools
@@ -56,5 +57,5 @@ jobs:
       run: python -m pip install --upgrade tox
     - name: Run tox targets for ${{ matrix.python-version }}
       run: |
-        ENV_PREFIX=$(tr -d "." <<< "py${{ matrix.python-version }}-")
-        TOXENV=$(tox --listenvs | grep $ENV_PREFIX | tr '\n' ',') python -m tox
+        ENV_PREFIX=$(tr -C -d "0-9" <<< "${{ matrix.python-version }}")
+        TOXENV=$(tox --listenvs | grep "^py$ENV_PREFIX" | tr '\n' ',') python -m tox
