Move to vanilla pre-commit
This is easier to manage and `pre-commit autoupdate` can keep dependencies up to date.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
 global-exclude *.py[cod]
 prune __pycache__
 prune tests
+recursive-include src *.c
 include CHANGELOG.md
 include DEVELOPMENT.md
 include LICENSE
