--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v3.2.0
+  rev: v3.4.0
   hooks:
   - id: check-added-large-files
   - id: check-case-conflict
@@ -12,20 +12,28 @@ repos:
   - id: check-yaml
   - id: end-of-file-fixer
   - id: trailing-whitespace
-- repo: local
+- repo: https://github.com/psf/black
+  rev: 20.8b1
   hooks:
   - id: black
-    name: black
-    entry: .tox/py38-codestyle/bin/black
-    language: system
-    types: [python]
-  - id: flake8
-    name: flake8
-    entry: .tox/py38-codestyle/bin/flake8 --config=setup.cfg
-    language: system
-    types: [python]
+    language_version: python3
+- repo: https://github.com/pycqa/isort
+  rev: 5.7.0
+  hooks:
   - id: isort
-    name: isort
-    entry: .tox/py38-codestyle/bin/isort
-    language: system
-    types: [python]
+- repo: https://gitlab.com/pycqa/flake8
+  rev: 3.8.4
+  hooks:
+  - id: flake8
+    additional_dependencies:
+    - flake8-2020
+    - flake8-bugbear
+    - flake8-coding
+    - flake8-comprehensions
+    - flake8-tidy-imports
+    - flake8-print
+- repo: https://github.com/mgedmin/check-manifest
+  rev: "0.46"
+  hooks:
+  - id: check-manifest
+    args: [--no-build-isolation]
