Add support for django 3.2.

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ envlist =
     {py35,py36,py37,py38,py39}-django22
     {py36,py37,py38,py39}-django30
     {py36,py37,py38,py39}-django31
+    {py36,py37,py38,py39}-django32
 
 [testenv]
 passenv =
@@ -37,6 +38,8 @@ deps =
     django30: djangorestframework
     django31: Django>=3.1,<3.2
     django31: djangorestframework
+    django32: Django>=3.2,<3.3
+    django32: djangorestframework
     dramatiq>=1.0.0 ; python_version >= "3.5"
     elasticsearch
     falcon
