--- a/tox.ini
+++ b/tox.ini
@@ -66,7 +66,8 @@ deps =
     requests
     rq
     six
-    sqlalchemy
+    sqlalchemy ; python_version != "3.4"
+    sqlalchemy<1.3.24 ; python_version == "3.4"
     starlette ; python_version >= "3.6"
     webtest
 commands =
