Pin jinja2 support to v2.x temporarily.
jinja2 v3 introduced changes for async_render which impacts render.
These will take more effort than we have available at the moment.

This will be addressed as a part of #646.

--- a/tox.ini
+++ b/tox.ini
@@ -49,7 +49,7 @@ deps =
     hug>=2.5.1 ; python_version >= "3.5"
     httpretty<1 ; python_version < "3.5"
     httpretty ; python_version >= "3.5"
-    jinja2
+    jinja2<3.0.0
     ; nameko tests temporarily disabled
     ; Due to bad pinning of kombu only a past nameko version can be installed
     ; alongside the latest celery.
