--- a/tox.ini
+++ b/tox.ini
@@ -48,7 +48,7 @@ deps =
     huey
     hug>=2.5.1 ; python_version >= "3.5"
     httpretty<1 ; python_version < "3.5"
-    httpretty ; python_version >= "3.5"
+    httpretty!=1.1.1 ; python_version >= "3.5"
     jinja2<3.0.0
     ; nameko tests temporarily disabled
     ; Due to bad pinning of kombu only a past nameko version can be installed
