Pin attrs for python 3.4, support was dropped with 21.2.0.

--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,8 @@ passenv =
     MONGODB_URL
     REDIS_URL
 deps =
+    attrs ; python_version > "3.4"
+    attrs<21.1.0 ; python_version <= "3.4"
     bottle
     cherrypy
     celery!=4.4.4  # https://github.com/celery/celery/issues/6153
