--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -98,10 +98,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
     - name: Upgrade packaging tools
       run: python -m pip install --upgrade pip setuptools virtualenv
     - name: Install dependencies
       run: python -m pip install --upgrade tox
-    - name: Run tox targets for 3.4
+    - name: Run tox targets for ${{ matrix.python-version }}
       run: |
-        TOXENV=$(tox --listenvs | grep "^py34" | tr '\n' ',') python -m tox
+        ENV_PREFIX=$(tr -C -d "0-9" <<< "${{ matrix.python-version }}" | cut -c -3)
+        TOXENV=$(tox --listenvs | grep "^py$ENV_PREFIX" | tr '\n' ',') python -m tox
