--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,8 +14,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: ubuntu-20.04
-        python: '3.10'
+        os: [ ubuntu-20.04 ]
+        python: ['3.10']
         manylinux_image: [ manylinux2014, manylinux_2_28 ]
         # Disable for platforms where pure Python wheels would be generated
         cibw_skip: [pp38-*, pp39-*, pp310-*, pp311-*, cp312-*, pp312-*]
