add pytest deprecation warning ignores for 3.12

--- a/pytest.ini
+++ b/pytest.ini
@@ -56,3 +56,6 @@ filterwarnings =
     ; Triggered by rq -> rq/job.py
     ignore:The `push_connection` function is deprecated\. Pass the `connection` explicitly instead\.:DeprecationWarning
     ignore:'cgi' is deprecated and slated for removal in Python 3.13
+    ; triggerd by celery with python 3.12
+    ignore:.*utcfromtimestamp\(\) is deprecated.*:DeprecationWarning
+    ignore:.*utcnow\(\) is deprecated.*:DeprecationWarning
