--- a/tox.ini
+++ b/tox.ini
@@ -23,6 +23,7 @@ deps =
     django42: Django>4.1,<5
     django42: djangorestframework
     django50a: Django>=5.0a1,<5.1
+    django50a: djangorestframework
     dramatiq>=1.0.0
     elasticsearch<8.0.0; python_version <= "3.9"
     elasticsearch ; python_version > "3.9"
