add core agent deprecation warning ignore

--- a/pytest.ini
+++ b/pytest.ini
@@ -59,3 +59,5 @@ filterwarnings =
     ; Triggerd by celery with python 3.12
     ignore:.*utcfromtimestamp\(\) is deprecated.*:DeprecationWarning
     ignore:.*utcnow\(\) is deprecated.*:DeprecationWarning
+    ; Triggered by CoreAgentManager with python 3.12
+    ignore:Python 3.14 will, by default, filter extracted tar archives and reject files or modify their metadata.*:DeprecationWarning
