remove warning len assertion in test_falcon add broker_connection_retry warning ignore

--- a/pytest.ini
+++ b/pytest.ini
@@ -59,5 +59,6 @@ filterwarnings =
     ; Triggerd by celery with python 3.12
     ignore:.*utcfromtimestamp\(\) is deprecated.*:DeprecationWarning
     ignore:.*utcnow\(\) is deprecated.*:DeprecationWarning
+    ignore:.*broker_connection_retry configuration setting will no longer determine.*:PendingDeprecationWarning
     ; Triggered by CoreAgentManager with python 3.12
     ignore:Python 3.14 will, by default, filter extracted tar archives and reject files or modify their metadata.*:DeprecationWarning
