--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,8 @@
 [tox]
 isolated_build = True
 envlist =
-    {py38,py39,py310,py311,py312}-django{40,41,42,50a}
-
+    {py38,py39,py310,py311,py312}-django{40,41,42},
+    {py310,py311,py312}-django{50a},
 [testenv]
 passenv =
     ELASTICSEARCH_URL
