--- a/pytest.ini
+++ b/pytest.ini
@@ -56,3 +56,9 @@ filterwarnings =
     ; Triggered by rq -> rq/job.py
     ignore:The `push_connection` function is deprecated\. Pass the `connection` explicitly instead\.:DeprecationWarning
     ignore:'cgi' is deprecated and slated for removal in Python 3.13
+    ; Triggerd by celery with python 3.12
+    ignore:.*utcfromtimestamp\(\) is deprecated.*:DeprecationWarning
+    ignore:.*utcnow\(\) is deprecated.*:DeprecationWarning
+    ignore:.*broker_connection_retry configuration setting will no longer determine.*:PendingDeprecationWarning
+    ; Triggered by CoreAgentManager with python 3.12
+    ignore:Python 3.14 will, by default, filter extracted tar archives and reject files or modify their metadata.*:DeprecationWarning
