--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,8 @@
 [tox]
 isolated_build = True
 envlist =
-    {py38,py39,py310,py311}-django{40,41,42}
-
+    {py38,py39,py310,py311,py312}-django{40,41,42},
+    {py310,py311,py312}-django{50a},
 [testenv]
 passenv =
     ELASTICSEARCH_URL
@@ -22,6 +22,8 @@ deps =
     django41: djangorestframework
     django42: Django>4.1,<5
     django42: djangorestframework
+    django50a: Django>=5.0a1,<5.1
+    django50a: djangorestframework
     dramatiq>=1.0.0
     elasticsearch<8.0.0; python_version <= "3.9"
     elasticsearch ; python_version > "3.9"
