--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ ubuntu-20.04, macos-11 ]
+        os: [ ubuntu-20.04 ]
         python: ['3.10']
         manylinux_image: [ manylinux2014, manylinux_2_28 ]
         # Disable for platforms where pure Python wheels would be generated
@@ -44,8 +44,32 @@ jobs:
           CIBW_BUILD_VERBOSITY: 1
           CIBW_MANYLINUX_X86_64_IMAGE: ${{ matrix.manylinux_image }}
           CIBW_MANYLINUX_AARCH64_IMAGE: ${{ matrix.manylinux_image }}
-          CIBW_ARCHS_MACOS: "x86_64 arm64"
           CIBW_ARCHS_LINUX: "auto aarch64"
+        run: python -m cibuildwheel
+
+      - uses: actions/upload-artifact@v3
+        with:
+          path: ./wheelhouse/*.whl
+
+  build_macos_wheels:
+    name: Build macos wheels (cross-compiles arm64)
+    runs-on: macos-11
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: actions/setup-python@v4
+        name: Install Python
+        with:
+          python-version: "3.10"
+
+      - name: Install cibuildwheel
+        run: |
+          python -m pip install --upgrade pip cibuildwheel
+      - name: Build binary wheels
+        env:
+          CIBW_SKIP: "pp38-* pp39-* pp310-* pp311-*"
+          CIBW_BUILD_VERBOSITY: 1
+          CIBW_ARCHS_MACOS: "x86_64 arm64"
         run: python -m cibuildwheel
 
       - uses: actions/upload-artifact@v3
