--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,7 @@ jobs:
         # For cross-architecture builds
         # https://cibuildwheel.readthedocs.io/en/stable/faq/#emulation
         if: runner.os == 'Linux'
-        uses: docker/setup-qemu-action@v1
+        uses: docker/setup-qemu-action@v3
         with:
           platforms: all
       - name: Build binary wheels
@@ -45,6 +45,31 @@ jobs:
           CIBW_MANYLINUX_X86_64_IMAGE: ${{ matrix.manylinux_image }}
           CIBW_MANYLINUX_AARCH64_IMAGE: ${{ matrix.manylinux_image }}
           CIBW_ARCHS_LINUX: "auto aarch64"
+        run: python -m cibuildwheel
+
+      - uses: actions/upload-artifact@v3
+        with:
+          path: ./wheelhouse/*.whl
+
+  build_macos_wheels:
+    name: Build macos wheels (cross-compiles arm64)
+    runs-on: macos-11
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: actions/setup-python@v4
+        name: Install Python
+        with:
+          python-version: "3.10"
+
+      - name: Install cibuildwheel
+        run: |
+          python -m pip install --upgrade pip cibuildwheel
+      - name: Build binary wheels
+        env:
+          CIBW_SKIP: "pp38-* pp39-* pp310-* pp311-*"
+          CIBW_BUILD_VERBOSITY: 1
+          CIBW_ARCHS_MACOS: "x86_64 arm64"
         run: python -m cibuildwheel
 
       - uses: actions/upload-artifact@v3
@@ -96,7 +121,7 @@ jobs:
           path: dist/*.tar.gz
 
   upload_pypi:
-    needs: [cibuildwheel_py38plus, build_pure_wheels, build_sdist]
+    needs: [cibuildwheel_py38plus, build_pure_wheels, build_sdist, build_macos_wheels]
     runs-on: ubuntu-20.04
     steps:
       - name: Download distributions for publishing.
