fix pre-commit check-manifest missing dependencies

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -42,3 +42,4 @@ repos:
     hooks:
     - id: check-manifest
       args: [--no-build-isolation]
+      additional_dependencies: [setuptools, wheel, setuptools-scm]
