--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,11 +14,11 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ ubuntu-20.04 ]
-        python: ['3.10']
+        os: [ ubuntu-22.04 ]
+        python: ['3.10', '3.11', '3.12', '3.13']
         manylinux_image: [ manylinux2014, manylinux_2_28 ]
         # Disable for platforms where pure Python wheels would be generated
-        cibw_skip: [ "pp38-* pp39-* pp310-* pp311-*" ]
+        cibw_skip: [ "pp310-* pp311-* pp312-* pp313-*" ]
     steps:
       - uses: actions/checkout@v4
 
