Fix rq instrumentation, change tox deps

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,8 @@
 [tox]
 isolated_build = True
 envlist =
-    {py38,py39,py310,py311,py312}-django{40,41,42},
-    {py310,py311,py312}-django{50a},
+    {py39,py310,py311,py312,py313}-django{40,41,42},
+    {py310,py311,py312,py313}-django{52},
 [testenv]
 passenv =
     ELASTICSEARCH_URL
@@ -46,7 +46,6 @@ deps =
     redis
     rq
     six
-    sqlalchemy < 2.0.0 ; python_version <= "3.8"
     sqlalchemy
     starlette
     webtest
@@ -54,6 +53,6 @@ commands =
     pytest {posargs}
 
 # For newer versions of python use --asyncio-mode=auto usage.
-[testenv:py{38,39,310,311}-django{40,41,42}]
+[testenv:py{310,311,312,313}-django{42,52}]
 commands =
     pytest {posargs} --asyncio-mode=auto
