Swap in mocket for httpretty

--- a/tox.ini
+++ b/tox.ini
@@ -33,9 +33,9 @@ deps =
     hiredis
     huey
     hug>=2.5.1
-    httpretty
     importlib_metadata
     jinja2
+    mocket
     psutil
     pymongo
     pyramid
