Pin elasticsearch until we can verify compat

--- a/tox.ini
+++ b/tox.ini
@@ -24,7 +24,7 @@ deps =
     django52: djangorestframework
     dramatiq>=1.0.0
     elasticsearch<8.0.0; python_version <= "3.9"
-    elasticsearch ; python_version > "3.9"
+    elasticsearch<9; python_version > "3.9"
     falcon
     flask
     flask-sqlalchemy
