--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 isolated_build = True
 envlist =
     {py39,py310,py311,py312,py313}-django{40,41,42},
-    {py310,py311,py312,py313}-django{52},
+    {py310,py311,py312,py313}-django{50a},
 [testenv]
 passenv =
     ELASTICSEARCH_URL
@@ -20,8 +20,8 @@ deps =
     django41: djangorestframework
     django42: Django>4.1,<5
     django42: djangorestframework
-    django52: Django>=5.2,<5.3
-    django52: djangorestframework
+    django50a: Django>=5.0a1,<5.1
+    django50a: djangorestframework
     dramatiq>=1.0.0
     elasticsearch<8.0.0; python_version <= "3.9"
     elasticsearch<9; python_version > "3.9"
