Roll back 3.13 test suite addition

--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 isolated_build = True
 envlist =
     {py39,py310,py311,py312,py313}-django{40,41,42},
-    {py310,py311,py312,py313}-django{50a},
+    {py310,py311,py312}-django{50a},
 [testenv]
 passenv =
     ELASTICSEARCH_URL
